--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-    <link rel="shortcut icon" href="upload/TG-Thumb.png" />
+    <link rel="shortcut icon" href="images/LiveCWB_Logo.png" />
 
-    <title>Grand Restaurant | Restaurant HTML Template</title>
+    <title>Live CWB</title>
 
     <link rel='stylesheet' href='css/settings.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/reset.css' type='text/css' media='all' />
